test/error/error.input94.zc
Type mismatch: integer literal vs. variable on line 1
